--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jsdom": "^24.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0"
   }
 }
